--- a/cssPractice/homepage/style.css
+++ b/cssPractice/homepage/style.css
@@ -1,6 +1,10 @@
+body{
+    font-family: 'Mochiy Pop One', sans-serif;
+}
+
 header{
-    background-color: pink;
-    padding: 20px 0;
+    background-color: #fff5ee;
+    padding: 30px 0;
 }
 
 h1 {
@@ -24,7 +28,7 @@ ul{
     /*横*/
     display: flex;
     /*缝隙*/
-    gap: 0 20px;
+    gap: 0 30px;
     /*中央*/
     justify-content: center;
     /*文字大熊*/
@@ -37,12 +41,13 @@ ul{
     margin-right: 30px;
 }
 
-.blog-contens{
-    display: flex;
-    width: 90%;
-    gap: 0 20px;
-    justify-content: center;
+.blog-contents{
+    width: 80%;
     margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    gap: 0 16px;
+    
 }
 
 .blog{
