--- a/header/Loginstyle.css
+++ b/header/Loginstyle.css
@@ -1,18 +1,48 @@
-.login{
-    width: 400px;
-    margin: 0 auto;
+.loginH1{
+    color: white;
+    text-align: center;
+    background-color: rgb(2, 2, 78);
     border: 1px solid black;
+    padding: 10px;
+    margin: 0px;
+    top: calc(50% - 0.5em);
+}
+
+.login{
+    background-color: greenyellow;
+    width: 580px;
+    margin: 0 auto;
+    border: 1px solid greenyellow;
     padding: 20px;
 }
-    
-h1{
-    text-align: left;
+
+.button1 { 
+    border-radius: 25px;
+    background: #8AC007;
+    padding: 20px;
+    width: 100px;
+    height: 10px;
 }
-    
-label{
-    font-weight: bold;
-}
-    
-input{
+
+h6{
     width: 300px;
+    text-align: center;
+}
+
+.button2 { 
+    border-radius: 25px;
+    background: #8AC007;
+    padding: 20px;
+    width: 150px;
+    height: 34px;
+}
+
+.cH6{
+    color: white;
+    position: fixed;
+    left: 0px;
+    bottom: 2px;
+    width: 100%;
+    background-color: gray;
+    padding: 50px;
 }
